[gd_scene load_steps=7 format=3 uid="uid://6nv8bj0tqx68"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/ColInstruction.gd" id="1_2acvq"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_kk8c1"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_74872"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_tns6c"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_rfqa6"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_7ot44"]

[node name="ColInstruction" type="Panel"]
script = ExtResource("1_2acvq")

[node name="BaseRow" parent="." instance=ExtResource("2_kk8c1")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_74872")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Draw"
script = ExtResource("4_tns6c")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_rfqa6")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "Col      Color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_7ot44")]
